@@ -25,12 +25,12 @@ site = AdultSite('freepornstreams', '[COLOR hotpink]Free Porn Streams[/COLOR]', 
 
 @site.register(default_mode=True)
 def Main():
-    site.add_dir('[COLOR hotpink]Popular Paysites[/COLOR]', 'Popular Paysites', 'Cat', site.img_cat)
-    site.add_dir('[COLOR hotpink]Categories[/COLOR]', 'premium on filehosts', 'Cat', site.img_cat)
+    site.add_dir('[COLOR hotpink]Categories[/COLOR]', site.url, 'Cat', '')
     site.add_dir('[COLOR hotpink]Clips[/COLOR]', '{0}videos/'.format(site.url), 'List', '')
     site.add_dir('[COLOR hotpink]Movies[/COLOR]', '{0}free-full-porn-movies/'.format(site.url), 'List', '')
     site.add_dir('[COLOR hotpink]Femdom[/COLOR]', '{0}femdom/'.format(site.url), 'List', '')
-    site.add_dir('[COLOR hotpink]HD[/COLOR]', '{0}tag/high-def-porn-video/'.format(site.url), 'List', '')
+    site.add_dir('[COLOR hotpink]Bukkake[/COLOR]', '{0}tag/bukkake-videos/'.format(site.url), 'List', '')
+    site.add_dir('[COLOR hotpink]BDSM[/COLOR]', '{0}tag/bdsm-fucked/'.format(site.url), 'List', '')
     site.add_dir('[COLOR hotpink]Shemale[/COLOR]', '{0}shemale/'.format(site.url), 'List', '')
     site.add_dir('[COLOR hotpink]Search[/COLOR]', '{0}?s='.format(site.url), 'Search', site.img_search)
     List(site.url)
@@ -39,20 +39,18 @@ def Main():
 
 @site.register()
 def List(url):
-    listhtml = utils.getHtml(url, '')
-    match = re.compile('<article.+?href="([^"]+).+?>([^<]+).+?data-lazy-src="([^"]+)', re.DOTALL | re.IGNORECASE).findall(listhtml)
+    listhtml = utils.getHtml(url, site.url)
+    match = re.compile(r'<article.+?href="([^"]+).+?>([^<]+).+?(?:data-lazy-|img\s*)src="(http[^"]+)', re.DOTALL | re.IGNORECASE).findall(listhtml)
     for videopage, name, img in match:
         name = utils.cleantext(name)
         site.add_download_link(name, videopage, 'Playvid', img, name)
-    nextp = re.compile('class="sfwppa-pages.+?next".+?href="([^"]+)', re.DOTALL | re.IGNORECASE).search(listhtml)
+    nextp = re.compile(r'<a\s*class="next\s*page.+?href="([^"]+)', re.DOTALL | re.IGNORECASE).search(listhtml)
     if nextp:
         nextp = nextp.group(1)
-        site.add_dir('Next Page ({0})'.format(nextp.split('/')[-2]), nextp, 'List', site.img_next)
-    else:
-        nextp = re.compile(r'<div\s*class="nav-previous".+?href="([^"]+)"\s*><span class="meta-nav">', re.DOTALL | re.IGNORECASE).search(listhtml)
-        if nextp:
-            nextp = nextp.group(1)
-            site.add_dir('Next Page ({0})'.format(nextp.split('/')[-2]), nextp, 'List', site.img_next)
+        currpg = re.compile(r'class="page-numbers\s*current[^\d]+([\d,]+)', re.DOTALL | re.IGNORECASE).findall(listhtml)[0]
+        lastpg = re.compile(r'([\d,]+)</a>\s*<a\s*class="next\s*page', re.DOTALL | re.IGNORECASE).findall(listhtml)[0]
+        site.add_dir('Next Page (Currently in Page {0} of {1})'.format(currpg, lastpg), nextp, 'List', site.img_next)
+
     utils.eod()
 
 
@@ -69,8 +67,7 @@ def Search(url, keyword=None):
 
 @site.register()
 def Cat(url):
-    listhtml = utils.getHtml(site.url, '')
-    listhtml = re.compile(r'{0}(.+?)</aside>'.format(url), re.DOTALL | re.IGNORECASE).findall(listhtml)[0]
+    listhtml = utils.getHtml(url, site.url)
     match = re.compile(r'href="([^"]+)"\s*class="tag.+?aria-label="([^"]+)', re.DOTALL | re.IGNORECASE).findall(listhtml)
     for catpage, name in sorted(match, key=lambda x: x[1]):
         name = utils.cleantext(name)
@@ -81,4 +78,4 @@ def Cat(url):
 @site.register()
 def Playvid(url, name, download=None):
     vp = utils.VideoPlayer(name, download=download, regex=r'href="([^"]+)"(?:\s*target="_blank")?\s*rel="nofollow', direct_regex=None)
-    vp.play_from_site_link(url, url)
+    vp.play_from_site_link(url, site.url)
