@@ -3,3 +3,5 @@ New sites from Porn TV Network:
 [asianpornmovies, asspoint, cartoonpornvideos, ghettotube, lesbianpornvideos, mobilepornmovies, movieshark, porntv, sexoasis, youngpornvideos]
 javguru - Show hoster names when selecting playback url
 javmoe - bug relating to missing hoster key, fix playback errors on some videos
+pornkinox - fix playback
+freepornstreams - fix pagination, categories, search
